# hermes-updater

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: IMPLEMENTATION_PLAN.md  PRD.md
install/: create-scheduled-task.ps1  uninstall.ps1
src/hermes_updater/: __init__.py  __main__.py  app.py  config.py  gui.py  logger.py  models.py  notifier.py  shell.py  ui.py  updater.py
tests/: conftest.py  test_app.py  test_config.py  test_gui.py  test_notifier.py  test_shell.py  test_updater.py
